yaml/d_test1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp1
  template:
    metadata:
      labels:
        app: webapp1
    spec:
      containers:
      - name: webapp1
        image: testapp/app1:v0.2
        command: ["/hli_app/sw/jboss/engine/tomcat/bin/start.sh"]
        args: ["-Dspring.config.location=file:///hli_app/sw/jboss/config/application_user1.yml"]
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp1-svc
  labels:
    app: webapp1
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: webapp1
---
