yaml/d_test3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp3
  template:
    metadata:
      labels:
        app: webapp3
    spec:
      containers:
      - name: webapp3
        image: testapp/app1:v0.2
        command: ["/hli_app/sw/jboss/engine/tomcat/bin/start.sh"]
        args: ["-Dapplication.yml.location=file:///hli_app/sw/jboss/config/application_user3.yml"]
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp3-svc
  labels:
    app: webapp3
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: webapp3
---
