yaml/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp1
  template:
    metadata:
      labels:
        app: webapp1
    spec:
      containers:
      - name: webapp1
        image: testapp/base:v0.1
        command: ["/hli_app/sw/jboss/engine/tomcat/bin/catalina.sh"]
        args: ["run"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: webapp1-svc
  #labels:
  #  app: webapp1
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: webapp1
