yaml/pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-subdomain
spec:
  selector:
    name: busybox
  clusterIP: None
  ports:
  - name: foo # 사실 포트는 필요하지 않다.
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox1
  labels:
    name: busybox
spec:
  hostname: busybox-1
  subdomain: default-subdomain
  containers:
  - image: testapp/app1:v0.2
    command: ["/hli_app/sw/jboss/engine/tomcat/bin/start.sh"]
    args: ["-Dspring.config.location=file:///hli_app/sw/jboss/config/application_user1.yml"]
    name: busybox
