yaml/ss_test.yml
apiVersion: v1
kind: Service
metadata:
  name: s-webapp1
  labels:
    app: s_webapp1
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: ss-webapp1
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ss-webapp1
spec:
  selector:
    matchLabels:
      app: p_webapp1 
  serviceName: sn-webapp1
  replicas: 3
  template:
    metadata:
      labels:
        app: p_webapp1 
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: c-webapp1
        image: testapp/app1:v0.2
        command: ["/hli_app/sw/jboss/engine/tomcat/bin/start.sh"]
        args: ["-Dspring.config.location=file:///hli_app/sw/jboss/config/application_user1.yml"]
        ports:
        - containerPort: 80
