yaml/i_test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ab-ingress2
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: app1.test.com
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp1-svc
          servicePort: 80
  - host: app2.test.com
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp2-svc
          servicePort: 80
  - host: app3.test.com
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp3-svc
          servicePort: 80
  - host: app4.test.com
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp4-svc
          servicePort: 80
  - host: app5.test.com
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp5-svc
          servicePort: 80
